--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fa-solid fa-paper-plane"></i> gaikwadmegha059@gmail.com</p>
-                <p><i class="fa-solid fa-square-phone"></i> 9881786997</p>
+                <p><i class="fa-solid fa-square-phone"></i> +91 9881786997</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/megha-gaikwad-11052023b/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/meghagaikwad059"><i class="fa-brands fa-github"></i></a>
