--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                     • Machine learning <br>
                     • HTML, CSS, JS <br>
                     • Python</P>
-                    <a href="https://github.com/meghagaikwad059/EduTrack---ML-project">GitHub Link</a>
+                    <a href="https://github.com/meghagaikwad059/EduTrack---ML-project">GitHub Link</a> <br>
+                    <a href="https://meghagaikwad059.github.io/EduTrack---ML-project/">Live Link</a>
             </div>
             <div>
                 <i class="fa-solid fa-gamepad"></i>
