--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
                 </div>
             </div>
             <div class="cer">
+                <img src="images/zensar.jpg">
+                <div class="layer">
+                    <h3>Zensar Training</h3>
+                    <p>Participated in Employability Skill Development Program conducted by RPG Foundation</p>
+                </div> 
+            </div>
+            <div class="cer">
                 <img src="images/microsoft.jpg">
                 <div class="layer">
                     <h3>Microsoft Student-Ambassador Training</h3>
