--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <div class="about" id="about">
         <div class="container">
             <div class="row">
-                <div class="about-col-1">
+                <br> <div class="about-col-1">
                     <img src="images/mg.png">
-                </div>
+                </div> 
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1> <br>
                     <p>I'm a final-year Computer Science student: Web-Enthusiast, familiar with backend technologies, as well as good in problem-solving, Data structures and algorithms, Aptitude. Throughout my studies, I've completed multiple projects demonstrating my ability to solve diverse technical challenges. I see myself in the coming years in a prominent position where I can apply my skills to innovate and create impactful solutions. Besides technical things, I am particularly passionate about designing intuitive interfaces that enhance user experience, aiming to contribute significantly to the field of technology.</p>
