--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="about" id="about">
         <div class="container">
             <div class="row">
-                <br> <div class="about-col-1">
-                    <img src="images/mg.png">
+                <div class="about-col-1">
+                    <br><img src="images/mg.png">
                 </div> 
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1> <br>
