--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <br><img src="images/mg.png">
+                    <img src="images/mg.png" style="margin-top: 20px;">
                 </div> 
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1> <br>
