--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                     <a href="https://meghagaikwad059.github.io/EduTrack---ML-project/">Live Link</a>
             </div>
             <div>
-                <i class="fa-solid fa-gamepad"></i>
-                <h2>Memory Game</h2>
-                <P>A card-flipping game designed to enhance memory and cognitive skills through matching pairs.<br>
-                    • HTML <br>
-                    • CSS <br>
-                    • JavaScript</P>
-                    <a href="#">GitHub Link</a>
+                <i class="fa-solid fa-laptop"></i>
+                <h2>TechMock:Interview Toolkit for ITAspirants</h2>
+                <P>Platform for CSE students to prepare for aptitude and interviews through a voice-based approach.<br>
+                    • Machine Learning <br>
+                    • MySQL<br>
+                    • HTML, CSS, JS</P>
+                    <a href="#">Currently Working on this Project</a>
             </div>
             <div>
                 <i class="fa-solid fa-database"></i>
