--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div>
                 <i class="fa-solid fa-laptop"></i>
-                <h2>TechMock:Interview Toolkit for ITAspirants</h2>
+                <h2>TechMock:<br>Interview Toolkit for ITAspirants</h2>
                 <P>Platform for CSE students to prepare for aptitude and interviews through a voice-based approach.<br>
                     • Machine Learning <br>
                     • MySQL<br>
@@ -111,13 +111,7 @@
                     • MYSQL Database <br>
                     • PhpMyAdmin</P>
                     <a href="https://github.com/meghagaikwad059/StudentTrack">GitHub Link</a>
-            </div>
-            <div>
-                <i class="fa-brands fa-figma"></i>
-                <h2>WhatsApp feature:Figma</h2>
-                <P>Added a new feature 'Streak' to WhatsApp to keep users engaged. Encouraging regular communication on the platform. <br>• Used Figma tools and prototyping.</P>
-                    <a href="https://www.figma.com/proto/1hJnAWihl5TVZ2CU3BY0GO/Megha-WhatsApp-Streak?node-id=1-25&t=qDAPVM6uERSpfcsi-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A25&show-proto-sidebar=1">Link to project</a>
-            </div>     
+            </div>   
         </div>
     </div>
 </div>
