--- a/index.html
+++ b/index.html
@@ -85,16 +85,6 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="project-list">
             <div>
-                <i class="fa-solid fa-graduation-cap"></i>
-                <h2>Edu-Track </h2>
-                <P>A data-driven platform providing personalized career predictions for students based on their interests and knowledge.<br>
-                    • Machine learning <br>
-                    • HTML, CSS, JS <br>
-                    • Python</P>
-                    <a href="https://github.com/meghagaikwad059/EduTrack---ML-project">GitHub Link</a> <br>
-                    <a href="https://meghagaikwad059.github.io/EduTrack---ML-project/">Live Link</a>
-            </div>
-            <div>
                 <i class="fa-solid fa-laptop"></i>
                 <h2>TechMock:<br>InterviewReady</h2>
                 <P>Platform for CSE students to prepare for aptitude and interviews through a voice-based approach.<br>
@@ -107,9 +97,11 @@
                <i class="fa-brands fa-figma"></i>
                 <h2>Figma Project Links</h2>
                 <P><a href="https://www.figma.com/design/SfMOvk9t7gbqBfaenH09oB/Star-Wars?node-id=5-6&t=6h1qg8SDPfJ3lXRi-1">Star Wars App (Prize Winning)</a><br>
+                                        <a href="https://www.figma.com/design/ju2TXz8cutwCMBTYVDmFku/Memory-Sharing?node-id=4-21&t=NuVsNeGiSQUr5ik7-1">Momento</a><br>
+                      <a href="https://www.figma.com/design/1hzJuC5xtg4IukxSktAfgx/Hava-Havai?node-id=1-14&t=fR97a0iFxvSSkR7m-1">Hava Havai</a><br>
+
                     <a href="https://www.figma.com/design/ReVZ0Ee4ibCz4LHZJzsSh3/Busibud-assignment?node-id=1-2&t=l1R3a48OMCSENquj-1">Recreation Design</a><br>
                     <a href="https://www.figma.com/design/eWio4KoXldujIKbuxxzUsk/LyfeIndex?node-id=1-2&t=DmYLFs2IHRHWjOaO-1">LyfeIndex</a><br>
-                      <a href="https://www.figma.com/design/vrg8gb4Ur9ugJadshwvVC8/Mock-Interview-Project?node-id=0-1&t=fbQsyKYhPO0rmMRE-1">MockInterview</a><br>
                     <a href="https://www.figma.com/design/OUtXk2y8mqfM1kwvVJwjK7/Travelling-page?node-id=0-1&t=tRO3G4FVnTFSAZlq-1">Landing Page</a><br>
                      
                 
