--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                <i class="fa-brands fa-figma"></i>
                 <h2>Figma Project Links</h2>
                 <P><a href="https://www.figma.com/design/SfMOvk9t7gbqBfaenH09oB/Star-Wars?node-id=5-6&t=6h1qg8SDPfJ3lXRi-1">Star Wars App (Prize Winning)</a><br>
-                                        <a href="https://www.figma.com/design/ju2TXz8cutwCMBTYVDmFku/Memory-Sharing?node-id=4-21&t=NuVsNeGiSQUr5ik7-1">Momento</a><br>
-                      <a href="https://www.figma.com/design/1hzJuC5xtg4IukxSktAfgx/Hava-Havai?node-id=1-14&t=fR97a0iFxvSSkR7m-1">Hava Havai</a><br>
+                                        <a href="https://www.figma.com/design/ju2TXz8cutwCMBTYVDmFku/Memory-Sharing?node-id=4-21&t=NuVsNeGiSQUr5ik7-1">Momento : Memory Sharing Platform</a><br>
+                      <a href="https://www.figma.com/design/1hzJuC5xtg4IukxSktAfgx/Hava-Havai?node-id=1-14&t=fR97a0iFxvSSkR7m-1">Hava Havai : Redesigned app's Interface</a><br>
 
-                    <a href="https://www.figma.com/design/ReVZ0Ee4ibCz4LHZJzsSh3/Busibud-assignment?node-id=1-2&t=l1R3a48OMCSENquj-1">Recreation Design</a><br>
-                    <a href="https://www.figma.com/design/eWio4KoXldujIKbuxxzUsk/LyfeIndex?node-id=1-2&t=DmYLFs2IHRHWjOaO-1">LyfeIndex</a><br>
-                    <a href="https://www.figma.com/design/OUtXk2y8mqfM1kwvVJwjK7/Travelling-page?node-id=0-1&t=tRO3G4FVnTFSAZlq-1">Landing Page</a><br>
+                    <a href="https://www.figma.com/design/ReVZ0Ee4ibCz4LHZJzsSh3/Busibud-assignment?node-id=1-2&t=l1R3a48OMCSENquj-1">Recreation Design : Exact Replication of Image For Given Task</a><br>
+                    <a href="https://www.figma.com/design/eWio4KoXldujIKbuxxzUsk/LyfeIndex?node-id=1-2&t=DmYLFs2IHRHWjOaO-1">LyfeIndex : Web Platform for Storing Family's Genetics History</a><br>
+                    <a href="https://www.figma.com/design/OUtXk2y8mqfM1kwvVJwjK7/Travelling-page?node-id=0-1&t=tRO3G4FVnTFSAZlq-1">Landing Page : A Simple Travelling Page (First Design)</a><br>
                      
                 
                 </P>
