--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <a href="https://www.hackerrank.com/profile/megha2326"><i class="fa-brands fa-hackerrank"></i></a>
                     
                 </div>
-                <a id="resume" href="images/resume2.pdf" download class="btn btn2">Download Resume</a>
+                <a id="resume" href="images/resumenew.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
